messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
        name: messaging-app-ingress
        annotations:
                nginx.ingress.kubernetes.io/rewrite-target: /
spec:
        rules:
                - host: messaging.local
                  http:
                          paths:
                                  - path: /
                                    pathType: Prefix
                                    backend:
                                            service:
                                                    name: messaging-app-servic   # must match your service name
                                                    port:
                                                            number: 8000
